# smartcalc

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
alembic/: README  env.py
alembic/versions/: ef5b2bfe6b2b_del_history_model.py
app/: main.py
app/api/enpoints/: __init__.py  compute_construction.py  history.py
app/api/routers/: __init__.py  main_router.py  user.py
app/api/validators/: compute_construction.py
app/compute/: steel_calculation.py
app/core/: auth.py  base.py  config.py  db.py  redis_db.py
app/crud/: base_crud.py
app/exceptions/: exceptions.py
app/loggers/: log.py
app/models/: user.py
app/schemas/: compute_construction.py
app/utils/const/: enum_const.py  exception_const.yaml  json_schema_extra.yaml  load_yaml_const.py  schemas_const.yaml
